# StarkHacks_Assembler

./: .gitignore  AGENTS.md  el plan.md  plan 2.md
hand_localizer/: .gitignore  AGENTS.md  CLAUDE.md  README.md  calibrate.py  detect.py  implement_esp.md  plan.md  plan2.md  plan3.md  requirements.txt  workspace_calibrate.py  workspace_transform.npz
hand_localizer/.learnings/: ERRORS.md
hand_localizer/lib/: __init__.py  apriltag_detector.py  calibration_board.py  camera_params.py  charuco.py  cube_model.py  cube_pose.py  glove_reader.py  palm_model.py  pose_math.py  pose_server.py  visualization.py  workspace_calibration.py
imu_buttons_sender/: init_plan.md
imu_buttons_sender/glove_firmware/: README.md  platformio.ini
imu_buttons_sender/glove_firmware/src/: main.cpp
moveArm/: .gitignore  AGENTS.md  README.md  pyproject.toml
moveArm/src/arm_mover/: __init__.py  cli.py  kinematics.py  pose_client.py  poses.py  runner.py
moveArm/tests/: test_cli.py  test_kinematics.py  test_pose_client.py  test_poses.py  test_runner.py  test_runner_segment.py
