[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arm-mover"
version = "0.1.0"
description = "Periodic Cartesian EE motion for SO-100/SO-101 follower arms via lerobot IK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech,kinematics]>=0.5,<0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
arm-mover = "arm_mover.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arm_mover"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
